Add edge weights

--- a/visu/index.html
+++ b/visu/index.html
@@ -7,10 +7,14 @@
     }
     .link {
       stroke: #ccc;
+    }    
+
+    .node .circle {
+      fill: #ccc;
+      stroke: #222; 
+      stroke-width: 1.5px;
     }
-    .node { stroke: #222; stroke-width: 1.5px; }    
-    .node.actor { fill: #888; }
-    .node.movie { fill: #BBB; }    
+
     .node text {
       pointer-events: none;
       font: 10px sans-serif;
