--- a/visu/index.html
+++ b/visu/index.html
@@ -5,9 +5,6 @@
         height: 800px;
         width: 100%;
     }
-    .link {
-      stroke: #ccc;
-    }    
 
     .node .circle {
       fill: #ccc;
@@ -17,8 +14,7 @@
 
     .node text {
       pointer-events: none;
-      font: 10px sans-serif;
-      stroke: #222; 
+      font: 10px sans-serif;      
       stroke-width: 0px;
     }
     
@@ -26,6 +22,7 @@
 <body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="http://d3js.org/d3.v3.js"></script>
+<script src="http://colorbrewer2.org/export/colorbrewer.js"></script>
 <!--<script src="d3.v3.js"></script>-->
 <script src="myscript.js"></script>
 <div id="graph">
