--- a/visu/index.html
+++ b/visu/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style>
-    #graph {
-        height: 800px;
-        width: 100%;
-    }
 
-    .node .circle {
-      fill: #ccc;
-      stroke: #222; 
-      stroke-width: 1.5px;
-    }
+<link href="bootstrap.min.css" rel="stylesheet">
+<link href="starter-template.css" rel="stylesheet">
 
-    .node text {
-      pointer-events: none;
-      font: 10px sans-serif;      
-      stroke-width: 0px;
-    }
-    
-</style>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="http://d3js.org/d3.v3.js"></script>
-<!--<script src="d3.v3.js"></script>-->
 <script src="http://colorbrewer2.org/export/colorbrewer.js"></script>
 <script src="myscript.js"></script>
 
 <body>
+  <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>    
+
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item slidecontainer">
+            <input type="range" min="0" max="100" value="80" class="slider" id="threshold">
+        </li>        
+        <li class="nav-item slidecontainer">
+            <input type="range" min="25" max="1000" value="500" class="slider" id="limit">
+        </li>        
+      </ul>               
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>        
+      </form>              
+    </div>
+  </nav>
   <div id="graph">    
   </div>
+
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+  <script src="bootstrap.min.js"></script>
+  <script src="ie10-viewport-bug-workaround.js"></script>
 </body>
