--- a/visu/index.html
+++ b/visu/index.html
@@ -19,12 +19,14 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item slidecontainer">
             <input type="range" min="0" max="100" value="80" class="slider" id="threshold">
+            <span id="threshold-label">80</span>
         </li>        
         <li class="nav-item slidecontainer">
             <input type="range" min="25" max="1000" value="500" class="slider" id="limit">
+            <span id="limit-label">500</span>
         </li>        
       </ul>               
-      <form class="form-inline my-2 my-lg-0">
+      <form class="form-inline my-2 my-lg-0" onsubmit="updateGraph()">
         <input class="form-control mr-sm-2" type="text" placeholder="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>        
       </form>              
@@ -32,6 +34,26 @@
   </nav>
   <div id="graph">    
   </div>
+
+  <div class="modal fade" id="proteinDetail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
