--- a/visu/index.html
+++ b/visu/index.html
@@ -22,8 +22,8 @@
             <span id="threshold-label">80</span>
         </li>        
         <li class="nav-item slidecontainer">
-            <input type="range" min="25" max="1000" value="500" class="slider" id="limit">
-            <span id="limit-label">500</span>
+            <input type="range" min="25" max="1000" value="25" class="slider" id="limit">
+            <span id="limit-label">25</span>
         </li>        
       </ul>               
       <form class="form-inline my-2 my-lg-0" onsubmit="updateGraph()">
@@ -35,21 +35,19 @@
   <div id="graph">    
   </div>
 
-  <div class="modal fade" id="proteinDetail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="proteinDetail" tabindex="-1" role="dialog" aria-labelledby="proteinDetail" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <h5 class="modal-title" id="proteinDetailTitle">Protein ID</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
-            ...
+          <div class="modal-body" id="proteinDetailBody">            
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>          
           </div>
         </div>
       </div>
