display all data available

--- a/visu/index.html
+++ b/visu/index.html
@@ -44,7 +44,8 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body" id="proteinDetailBody">            
+          <div class="modal-body">
+            <p id="proteinDetailBody"></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>          
