--- a/visu/index.html
+++ b/visu/index.html
@@ -26,10 +26,10 @@
             <span id="limit-label">25</span>
         </li>        
       </ul>               
-      <form class="form-inline my-2 my-lg-0" onsubmit="updateGraph()">
+      <span class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" id="search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+        <button class="btn btn-outline-success my-2 my-sm-0" onclick="updateGraph()">Search</button>        
+      </span>
     </div>
   </nav>
   <div id="graph">    
