--- a/visu/index.html
+++ b/visu/index.html
@@ -22,8 +22,8 @@
             <span id="threshold-label">80</span>
         </li>        
         <li class="nav-item slidecontainer">
-            <input type="range" min="25" max="1000" value="25" class="slider" id="limit">
-            <span id="limit-label">25</span>
+            <input type="range" min="25" max="1000" value="200" class="slider" id="limit">
+            <span id="limit-label">200</span>
         </li>        
       </ul>               
       <span class="form-inline my-2 my-lg-0">
@@ -48,6 +48,7 @@
             <p id="proteinDetailBody"></p>
           </div>
           <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="centerOnProtein()">Center on this protein</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>          
           </div>
         </div>
