Added a button to pause the simulation

--- a/visu/index.html
+++ b/visu/index.html
@@ -25,6 +25,9 @@
             <input type="range" min="25" max="1000" value="200" class="slider" id="limit">
             <span id="limit-label">200</span>
         </li>        
+        <li>
+          <button class="btn btn-outline-success" onclick="togglePlay()">Pause</button>
+        </li>
       </ul>               
       <span class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" id="search">
