--- a/visu/index.html
+++ b/visu/index.html
@@ -37,30 +37,38 @@
   </nav>
   <div id="graph">    
   </div>
+  <footer class="fixed-bottom">
+    <div class="container">
+      <div class="row">
+        <div class="col-10">Stat du cul</div>
+        <div class="col-2 text-right">&copy; Ansel, Paul, Sakina</div>
+      </div>
+    </div>  
+  </footer>
 
   <div class="modal fade" id="proteinDetail" tabindex="-1" role="dialog" aria-labelledby="proteinDetail" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="proteinDetailTitle">Protein ID</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <p id="proteinDetailBody"></p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="centerOnProtein()">Center on this protein</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>          
-          </div>
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="proteinDetailTitle">Protein ID</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p id="proteinDetailBody"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="centerOnProtein()">Center on this protein</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>          
         </div>
       </div>
     </div>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-  <script src="bootstrap.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <script src="ie10-viewport-bug-workaround.js"></script>
 </body>
