--- a/visu/index.html
+++ b/visu/index.html
@@ -40,7 +40,7 @@
   <footer class="fixed-bottom">
     <div class="container">
       <div class="row">
-        <div class="col-10">Stat du cul</div>
+        <div class="col-10 text-left">Stat du cul</div>
         <div class="col-2 text-right">&copy; Ansel, Paul, Sakina</div>
       </div>
     </div>  
